--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "highlight.js": "^10.5.0",
+    "katex": "^0.12.0",
     "polka": "next",
     "sirv": "^1.0.0"
   },
